--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@ and incredible power of the Trans community.">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://metatags.io/">
+<meta property="og:url" content="https://txtranspride.life/">
 <meta property="og:title" content="TX Trans Pride Presented by Prism Health North Texas">
 <meta property="og:description" content="Celebrating the remarkable, incomparable, 
 and incredible power of the Trans community.">
-<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="og:image" content="/TransPrideHeader2.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:url" content="https://txtranspride.life/">
 <meta property="twitter:title" content="TX Trans Pride Presented by Prism Health North Texas">
 <meta property="twitter:description" content="Celebrating the remarkable, incomparable, 
 and incredible power of the Trans community.">
-<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="twitter:image" content="/TransPrideHeader2.png">
 <script src="https://kit.fontawesome.com/1f9ab20cf7.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://www.w3schools.com/w3css/4/w3.css'>
