--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@ and incredible power of the Trans community.">
 <meta property="og:title" content="TX Trans Pride Presented by Prism Health North Texas">
 <meta property="og:description" content="Celebrating the remarkable, incomparable, 
 and incredible power of the Trans community.">
-<meta property="og:image" content="http://txtranspride.life/TransPrideHeader2.png">
+<meta property="og:image" content="https:/thekaboom.github.io/TransPrideHeader2.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="http://txtranspride.life/TransPrideHeader2.png">
+<meta property="twitter:url" content="https:/thekaboom.github.io/TransPrideHeader2.png">
 <meta property="twitter:title" content="TX Trans Pride Presented by Prism Health North Texas">
 <meta property="twitter:description" content="Celebrating the remarkable, incomparable, 
 and incredible power of the Trans community.">
