--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@ and incredible power of the Trans community.">
 <meta property="og:title" content="TX Trans Pride Presented by Prism Health North Texas">
 <meta property="og:description" content="Celebrating the remarkable, incomparable, 
 and incredible power of the Trans community.">
-<meta property="og:image" content="https:/thekaboom.github.io/txtranspride/TransPrideHeader2.png">
+<meta property="og:image" content="https://i.ibb.co/Xt1sKjQ/Trans-Pride-Header2.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https:/thekaboom.github.io/txtranspride/TransPrideHeader2.png">
+<meta property="twitter:url" content="https:/txtranspride.life">
 <meta property="twitter:title" content="TX Trans Pride Presented by Prism Health North Texas">
 <meta property="twitter:description" content="Celebrating the remarkable, incomparable, 
 and incredible power of the Trans community.">
-<meta property="twitter:image" content="/TransPrideHeader2.png">
+<meta property="twitter:image" content="https://i.ibb.co/Xt1sKjQ/Trans-Pride-Header2.png">
 <script src="https://kit.fontawesome.com/1f9ab20cf7.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://www.w3schools.com/w3css/4/w3.css'>
